--- a/src/css/blocks/_content.scss
+++ b/src/css/blocks/_content.scss
@@ -5,7 +5,7 @@
 
 .content,
 .e-content {
-	--flow-space: 1.5em;
+	--flow-space: var(--size-space);
 }
 .content {
 	// required: works like overflow for this .pantheon grid item
