--- a/src/css/global/_prose.scss
+++ b/src/css/global/_prose.scss
@@ -93,6 +93,11 @@ hr {
 	position: relative;
 	// show the overflow in Edge and IE
 	overflow: visible;
+
+	&,
+	& + * {
+		--flow-space: var(--size-large);
+	}
 }
 
 // Hide elements visually
